# simpleColorTrack

./: .gitignore  README.md  colortrack.cbp  colortrack.h  main.cpp  makefile
OnBoard/: CMakeLists.txt  Udp.h  basestruct.h  capture.cpp  colortrack.cbp  colortrack.cpp  colortrack.depend  colortrack.h  colortrack.layout  detection.cpp  detection.h  gimbal.cpp  gimbal.h  lktracking.cpp  lktracking.h  makefile  pidpara.data  server.cpp  vcompress.cpp  yuv2hsl.cpp  yuv2hsl.h
QtConsole/: QtConsole.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui
doc/: config.md  devplan.md  keyword.xlsx
