cmake_minimum_required(VERSION 2.8.4)
project(OnBoard)

set(SOURCE_FILES gimbal.cpp server.cpp yuv2hsl.cpp colortrack.cpp)
add_executable(OnBoard ${SOURCE_FILES})

target_link_libraries( OnBoard "${OnBoard_SOURCE_DIR}/../../iTRLib/itrbase/bin/debug/libitrbase.a" )
target_link_libraries( OnBoard "${OnBoard_SOURCE_DIR}/../../iTRLib/itrvision/bin/debug/libitrvision.a" )
target_link_libraries( OnBoard "${OnBoard_SOURCE_DIR}/../../iTRLib/itralgorithm/bin/debug/libitralgorithm.a" )
target_link_libraries( OnBoard "${OnBoard_SOURCE_DIR}/../../iTRLib/itrsystem/bin/debug/libitrsystem.a" )
target_link_libraries( OnBoard "${OnBoard_SOURCE_DIR}/../../iTRLib/itrdevice/bin/debug/libitrdevice.a" )
target_link_libraries( OnBoard "${OnBoard_SOURCE_DIR}/../../iTRLib/ix264/bin/debug/libix264.a" )
target_link_libraries( OnBoard "avcodec")
target_link_libraries(OnBoard "swscale")
target_link_libraries(OnBoard "avutil")
target_link_libraries(OnBoard "x264")
target_link_libraries(OnBoard "pthread")
target_link_libraries(OnBoard "v4l2")

include_directories( "${OnBoard_SOURCE_DIR}/../../iTRLib/3rdparty/alglib")
include_directories( "${OnBoard_SOURCE_DIR}/../../iTRLib/itrbase")
include_directories("${OnBoard_SOURCE_DIR}/../../iTRLib/itrvision")
include_directories("${OnBoard_SOURCE_DIR}/../../iTRLib/itralgorithm")
include_directories("${OnBoard_SOURCE_DIR}/../../iTRLib/itrsystem")
include_directories("${OnBoard_SOURCE_DIR}/../../iTRLib/itrdevice")
include_directories("${OnBoard_SOURCE_DIR}/../../iTRLib/ix264")